update html and css

--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Krystian</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="pages/experience.html">Experience</a></li>
+          <li><a href="pages/contact.html">Contact</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
+      <img src="images/profile.png" alt="Laptop and other tools on the table" class="profile-image">
       <h1 class="tag name">Hello, I’m Krystian.</h1>
       <p class="tag location">My home is Canada, Vancouver.</p>
     </header>
@@ -29,7 +30,7 @@
         <p>I’ve been a professional graphic designer and animator and am a life-long learner who's always interested in expanding my skills.</p>
       </div>
 
-      <div class="card">
+      <section class="card">
         <h2>Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
@@ -40,16 +41,18 @@
           <li>Rails</li>
         </ul>
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div>
+        <h3>My hobbies</h3>
+        <ul>
+          <li>Programming</li>
+          <li>Running</li>
+          <li>Swimming</li>
+        </ul>
+      </section>
 
     </main>
     <footer>
-      <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
-      </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+
+      <p class="copyright">&copy; 2020, Krystian</p>
     </footer>
   </body>
   </html>
