--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Krystian's experience</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -16,26 +16,17 @@
               <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-    <header style="background: url('../images/experience.png') no-repeat top center; background-size: cover; overflow: hidden;">
+    <header style="background: url('../images/contact.jpg') no-repeat top center; background-size: cover; overflow: hidden;>
             <img src="../images/profile.png" alt="Laptop and other tools on the table" class="profile-image">
-            <h1 class="tag name">My experience</h1>
-            <p class="tag location">I'm happy to share my experience with you</p>
+            <h1 class="tag name">Contact me</h1>
+            <address>
+                <h3 class="email">myemail@company.com</h3>
+            </address>
     </header>
     <main>
-        <section>
-            <ul class="experience">
-                <li>
-                    <h2>Company a</h2>
-                    <h4>2012-2014</h4>
-                    <p>Web Designer</p>
-                </li>
-                <li>
-                    <h2>Company b</h2>
-                    <h4>2014-2016</h4>
-                    <p>Web Developer</p>
-                </li>
-            </ul>
-        </section>
+        <address>
+            <p class="email">myemail@company.com</p>
+        </address>
     </main>
     <footer>
         <p class="copyright">&copy; 2020, Krystian</p>
