fix image url on contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,7 @@
               <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-    <header style="background: url('../images/contact.jpg') no-repeat top center; background-size: cover; overflow: hidden;>
+    <header style="background: url('../images/contact.jpg') no-repeat top center; background-size: cover; overflow: hidden;">
             <img src="../images/profile.png" alt="Laptop and other tools on the table" class="profile-image">
             <h1 class="tag name">Contact me</h1>
             <address>
